# crystalmail

./: .agentum-template.json  .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  findings_20250425.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: .gitkeep  brand_guide.md  import_workflows.md  promo_feature.md  release.md  review-checklist.md  security-checklist.md
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_fts_contentless_delete.sql  0003_add_forwarded.sql  0004_aliases_and_folders.sql  0005_archive_on_reply.sql  0006_spam_folder.sql  0007_prefetch_days.sql  0008_unescape_subjects.sql  0009_junk_flag.sql  0010_spam_rules.sql  0011_unified_starred.sql  0012_folder_sync_enabled.sql  0013_workflows.sql  0014_workflow_archive_after.sql  0015_workflow_rules.sql  0016_workflow_rule_folder.sql  0017_workflow_training_candidates.sql  0018_envelope_has_attachments.sql  0019_account_sync_mode.sql  0020_account_server_stores_sent.sql  0021_contacts.sql  0022_address_history_fix_incoming.sql  0023_contact_tags.sql  0024_lifetime_rules.sql  0025_unify_filters_into_workflow_rules.sql  0026_delay_minutes.sql  0027_commitments.sql  0028_commitment_status.sql  0029_last_published_sequence.sql  0030_negotiations.sql  0031_commitment_series_uid.sql
src-tauri/src/: main.rs  state.rs
src-tauri/src/application/: actor.rs  attachments.rs  backup.rs  body.rs  body_essentials.rs  calendar_actor.rs  calendar_imap.rs  contact_extract.rs  contacts_io.rs  draft_import.rs  event_extract.rs  flags.rs  ics.rs  mark_read.rs  message_ops.rs  mod.rs  prefetch.rs  rule_scheduler.rs  smtp.rs  spam_analysis.rs  spam_rules.rs  sync.rs  timeprotocol_envelope.rs  workflow_analyzer.rs  workflow_rules.rs  workflow_training.rs  workflows.rs
src-tauri/src/commands/: accounts.rs  backup.rs  calendar.rs  contacts.rs  draft_import.rs  folders.rs  mail.rs  mod.rs  pi.rs  pi_models.rs  spam.rs  taskbar.rs  workflows.rs
src-tauri/src/domain/: account.rs  auth.rs  calendar.rs  contact.rs  folder.rs  message.rs  mod.rs  spam_rule.rs  workflow.rs
src-tauri/src/infrastructure/: db.rs  db_ops.rs  imap_client.rs  migrations.rs  mod.rs  queries.rs
src-tauri/src/llm/: mod.rs  pi_rpc.rs
src-tauri/src/timeprotocol/: commands.rs  domain.rs  ics.rs  mod.rs  negotiation_engine.rs  negotiation_store.rs  store.rs  subscriptions.rs  sync.rs
src/components/: AccountFilterBar.tsx  AddAccountDialog.tsx  AddressAutocomplete.tsx  AiRequiredNotice.tsx  CalendarMonthView.tsx  CalendarView.tsx  CalendarWeekView.tsx  CommandPalette.tsx  Compose.tsx  ContactDetail.tsx  ContactsView.tsx  EventEditor.tsx  HotkeyHelp.tsx  HoverTip.tsx  IcsInvitePanel.tsx  InboxList.tsx  LearnSpamRuleDialog.tsx  MeetingJoinOverlay.tsx  MoveToDialog.tsx  NegotiationPanel.tsx  NegotiationStartDialog.tsx  PiTerminal.tsx  Reader.tsx  RichEditor.tsx  SearchPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarIcons.tsx  TagEditor.tsx  UndoSendOverlay.tsx  WorkflowPicker.tsx  WorkflowPromptDialog.tsx  WorkflowResultDialog.tsx  WorkflowRuleToast.tsx
src/components/settings/: AccountSettings.tsx  BackupSettings.tsx  CalendarSettings.tsx  FolderSyncSettings.tsx  HotkeySettings.tsx  NotificationSettings.tsx  PiSettings.tsx  SpamRulesSettings.tsx  TagsSettings.tsx  TrustedSendersSettings.tsx  WorkflowSettings.tsx  WorkflowTrainingDialog.tsx
src/hooks/: useFontZoom.ts  useHotkeys.ts  useNow.ts
src/locales/: de.json
src/settings/: hotkeys.ts  notifications.ts
src/utils/: accountOrder.ts  aiState.ts  badgeIcon.ts  calendarEvent.ts  imapFolderName.ts  lifetimeTag.ts  mailHtml.ts  meetingLink.ts  notifySound.ts  recentSearches.ts  searchDsl.ts  trustedSenders.ts
tests/: .gitkeep
