[package]
name = "crystalmail"
version = "0.4.1"
description = "Clean, fast, local-first IMAP mail client with pi-powered AI features"
authors = ["melchinger"]
edition = "2021"
license = "MIT"

[[bin]]
name = "crystalmail"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ────────────────────────────────────────────────────────────────
# `devtools` aktiviert das Rechtsklick→Inspect-Menü auch in Release-
# Builds. Wir lassen es bewusst auf — die App ist Open-Source, wer
# sie bauen kann, kann sie eh debuggen, und für Bug-Reports brauchen
# Endnutzer den Console-Output. Wenn das später Production-streng
# werden soll, ein zweites Cargo-Feature `release-no-devtools` und
# `default = ["devtools"]` mit Override-Möglichkeit.
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"

# ── Async runtime, serialization, logging ─────────────────────────────────────
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# ── IMAP / SMTP / MIME ────────────────────────────────────────────────────────
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
futures-util = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
lettre = { version = "0.11", default-features = false, features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "builder",
  "hostname",
] }
mail-parser = "0.9"

# ── iCalendar parsing for invitation handling (Phase 0 calendar) ──────────────
# RFC 5545 parser. We use it only to read invitations from incoming mail
# attachments — outgoing REPLY ICS is hand-built (small, well-defined shape,
# avoids depending on the crate's writer surface).
ical = { version = "0.10", default-features = false, features = ["ical"] }

# ── Local store (SQLite) + full-text search via FTS5 ──────────────────────────
# Encrypted-at-rest via SQLCipher. The `bundled-sqlcipher-vendored-openssl`
# feature builds SQLCipher and OpenSSL from source — self-contained binary
# without an external OpenSSL dependency. First build needs Strawberry Perl
# on PATH (Git's bundled perl lacks `Locale::Maketext::Simple` & friends).
#
# The cipher key lives in the OS keyring under `crystalmail::db_master` —
# 256 bits from the OS RNG, generated on first run, never written to disk.
# See `infrastructure/db.rs::open_cipher_key` for the keyring read/write
# and `apply_pragmas` for the actual `PRAGMA key`.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# ── Secrets in OS credential store ────────────────────────────────────────────
# Keyring v3 requires explicit backend features; without them the crate
# silently uses an in-memory mock that loses secrets on process exit.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1.12.3"
tauri-plugin-shell = "2.3.5"

# ── Crypto for opt-in passphrase-encrypted password backup ────────────────────
# Argon2id (memory-hard KDF) + ChaCha20-Poly1305 (AEAD). Pure-Rust crates from
# the RustCrypto org — no OpenSSL dep, so they don't conflict with the
# rustls-only TLS stack and they cross-compile cleanly. `getrandom` provides
# the OS RNG for nonces and KDF salts. base64 carries the encoded blobs in
# the JSON backup file.
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "getrandom"] }
base64 = "0.22"
getrandom = "0.2"

# ── Contacts I/O: CSV-Roundtrip (vCard wird hand-gerollt) ─────────────────────
csv = "1.3"

# ── Cross-platform "open with default app" for attachment-open feature ────────
# Maps to: Windows ShellExecuteW, macOS `open`, Linux `xdg-open`. Tiny crate,
# no transitive dependencies of note. Used by `attachments::open_with_default`
# to hand a written-to-temp file off to the user's PDF viewer / Word / etc.
opener = "0.7"

[package.metadata.tauri]
active = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
